# ParallelReduction

./: CMakeLists.txt  Results.xlsx  Windows info.txt  main.cpp  minReduction.cl  sum.cl  sumReduction.cl  sumReduction1.cl  sumReduction2.cl  sumReduction3.cl  sumReduction4.cl  sumReduction5.cl  sumReduction6.cl  withStartup - 2.csv  withStartup.csv  withoutStartup - 2.csv  withoutStartup.csv
cmake_modules/: FindOpenCL.cmake
singleResults/: Catanzaro.csv  CatanzaroStartup.csv  Coalesced.csv  CoalescedStartup.csv  Divergence.csv  DivergenceStartup.csv  Dournac.csv  DournacStartup.csv  Loop.csv  LoopStartup.csv  ProCon.csv  ProConStartup.csv  multiCPU.csv  singleCPU.csv
